--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -1,3 +1,4 @@
+<!-- page created by student x22223487 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,13 +10,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/Stylesheet.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <body>
     <div class="header-home">
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../../../GitHubFiles/Project folder/index.html">
                     <img id="logo" src="../images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
                     <p class="tagline">Developing solutions</p>
                 </a>
@@ -63,7 +66,7 @@
 
         <div class="inner row">
             <div class="text-center">
-                <h1 class="display-3  py-5">About Us</h1>
+                <h1 class="display-3  py-5" style="color: white;">About Us</h1>
             </div>
             <div clas>
                 <p>We have the satifsfaction of our customers to hight steem, we know a happy client is the best
@@ -78,14 +81,14 @@
     <div class="main">
         <h4 class="display-3 py-5">Our clients</h4>
         <div class="row">
-            <div class="col-lg-3 col-md-0">
+            <div class="col-lg-4 col-md-0">
                 <img class="client" src="../images/AdvanceLogo.png" alt="Advance Logo">
 
             </div>
-            <div class="col-lg-3 col-md-0">
+            <div class="col-lg-4 col-md-0">
                 <img class="client" src="../images/CrecentLogo.png" alt="Crecent Logo">
             </div>
-            <div class="col-lg-3 col-md-0">
+            <div class="col-lg-4 col-md-0">
                 <img class="client" src="../images/FixBitLogo.png" alt="FixBit Logo">
             </div>
 
@@ -93,7 +96,7 @@
 
 
 
-        <p><strong>E&V</strong> is a Professional <strong>developers</strong> Platform. Here we will
+        <p class="py-5"><strong>E&V</strong> is a Professional <strong>developers</strong> Platform. Here we will
             provide you only interesting content, which you will like very much. We're dedicated to providing you the
             best of <strong>developers</strong>, with a focus on dependability and <strong>software
                 and web development</strong> We hope you enjoy our <span id="W_Type4">developers</span> as much as we
@@ -111,6 +114,37 @@
 
         </div> -->
     </div>
+    <nav class="navbar navbar-expand-lg navbar-dark  footer">
+        <div class="container-fluid bottom">
+            <a class="navbar-brand" href="../../../GitHubFiles/Project folder/index.html">
+                <img src="../images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
+                <p class="tagline">Developing solutions</p>
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-row" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item m-5">
+                        <a class="nav-link" aria-current="page"
+                            href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                    </li>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="../Services/index.html">Services</a>
+                    </li>
+                    <li class="nav-item m-5">
+                        <a class="nav-link" href="../contact/contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item m-5">
+                        <a class="nav-link active" style="color:#FFD700" ;
+                            href="../../../GitHubFiles/Project folder/about/about.html">About</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- <script src="../../Project folder/js/about.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
