--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -1,3 +1,4 @@
+<!-- page created by student x22223487 -->
 <!doctype html>
 <html lang="en">
 
@@ -18,7 +19,7 @@
     <div class="header-home ">
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img id="logo" src="images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
                     <p class="tagline">Developing solutions</p>
                 </a>
@@ -61,18 +62,19 @@
         </nav>
 
 
-        <video class="videoPlayer object-fit-contain" autoplay muted loop id="myVideo">
-            <source src="images/pexels-rostislav-uzunov-9629254 (1080p).mp4" type="video/mp4">
+        <video class="videoPlayer object-fit-contain" autoplay muted loop id="myVideo"
+            src="images/pexels-rostislav-uzunov-9629254 (1080p).mp4" type="video/mp4">
+
 
             Your browser does not support the video tag.
         </video>
         <div class="over">
             <div class="inner">
-                <h1 class="display-2">E&V creates custom WEB and
-                    MOBILE software focusing on your
+                <h1 class="display-2"><strong>E&V</strong> creates custom WEB and
+                    SOFTWARE focusing on your
                     business
                 </h1>
-                <button class="button">Explore</button>
+                <a href="../Project folder/about/about.html"><button class="button">About</button></a>
             </div>
 
         </div>
@@ -81,7 +83,7 @@
 
 
     <div class="main">
-
+        <a style="color: white;" onclick="changeVideo()">Change video</a>
         <br>
         <div class="intro py-5">
             <h2>Introduction: How we work</h2>
@@ -90,7 +92,7 @@
                 computation we can make
                 our products totally independent, functional and efficient, we put though in all we develop.
             </p>
-            <a href=""></a><button class="button">Explore</button></a>
+            <a href="../Project folder/about/about.html"></a><button class="button">About</button></a>
             <br>
             <div class="background">
                 <div class="advantages py-5">
@@ -113,10 +115,10 @@
             </div>
             <div>
                 <br>
-                <div class="row m-auto  py-5">
+                <div class="row m-auto py-5">
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
-                        <div class="card">
-                            <a href="">
+                        <div class="card bs-body-color">
+                            <a href="../Project folder/Services/index.html">
                                 <img src="images/pexels-oluwaseun-duncan-226232.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">We develop applications in different
@@ -128,7 +130,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="">
+                            <a href="../Project folder/Services/index.html">
                                 <img src="images/pexels-porapak-apichodilok-369376.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">Diversity of platform design, taking in
@@ -140,7 +142,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="">
+                            <a href="../Project folder/Services/index.html">
                                 <img src="images/pexels-tim-douglas-6205512.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">Our products can help in a varaiety of
@@ -153,7 +155,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="">
+                            <a href="../Project folder/about/about.html">
                                 <img src="images/pexels-tom-swinnen-1034646.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">All our products are customise to our
@@ -175,7 +177,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
                 <p class="tagline">Developing solutions</p>
             </a>
@@ -190,15 +192,14 @@
                         <a class="nav-link active" style="color:#FFD700" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="../Project folder/Services/index.html">Services</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="../Project folder/Contact/contact.html">Contact</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="/GitHubFiles/Project folder/about/about.html">About</a>
+                        <a class="nav-link" href="../Project folder/about/about.html">About</a>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -209,6 +210,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="../Project folder/js/homepage.js"></script>
 
 </body>
 
