--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../images/Logo.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../images/Logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/Stylesheet.css">
@@ -18,7 +18,7 @@
     <div class="header-home">
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../../../GitHubFiles/Project folder/index.html">
+                <a class="navbar-brand" href="../../../GitHubFiles/Project%20folder/index.html">
                     <img id="logo" src="../images/Logo.svg" alt="Logo" class="d-inline-block align-text-top">
                     <p class="tagline">Developing solutions</p>
                 </a>
@@ -33,7 +33,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item m-5">
                             <a class="nav-link" aria-current="page"
-                                href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                                href="../../../GitHubFiles/Project%20folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
                             <a class="nav-link" href="../Services/index.html">Services</a>
@@ -43,7 +43,7 @@
                         </li>
                         <li class="nav-item m-5">
                             <a class="nav-link active" style="color:#FFD700" ;
-                                href="../../../GitHubFiles/Project folder/about/about.html">About</a>
+                                href="../../../GitHubFiles/Project%20folder/about/about.html">About</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -128,7 +128,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
-            <a class="navbar-brand" href="../../../GitHubFiles/Project folder/index.html">
+            <a class="navbar-brand" href="../../../GitHubFiles/Project%20folder/index.html">
                 <img src="../images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
                 <p class="tagline">Developing solutions</p>
             </a>
@@ -141,7 +141,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
                         <a class="nav-link" aria-current="page"
-                            href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                            href="../../../GitHubFiles/Project%20folder/index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link" href="../Services/index.html">Services</a>
@@ -151,7 +151,7 @@
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link active" style="color:#FFD700" ;
-                            href="../../../GitHubFiles/Project folder/about/about.html">About</a>
+                            href="../../../GitHubFiles/Project%20folder/about/about.html">About</a>
                     </li>
                 </ul>
             </div>
