--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E&V</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../images/Logo.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../images/Logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/Stylesheet.css">
@@ -37,13 +37,13 @@
                                 href="index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="../Project folder/Services/index.html">Services</a>
+                            <a class="nav-link" href="../Project%20folder/Services/index.html">Services</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="../Project folder/Contact/contact.html">Contact</a>
+                            <a class="nav-link" href="../Project%20folder/Contact/contact.html">Contact</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="../Project folder/about/about.html">About</a>
+                            <a class="nav-link" href="../Project%20folder/about/about.html">About</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -62,8 +62,8 @@
         </nav>
 
 
-        <video class="videoPlayer object-fit-contain" autoplay muted loop id="myVideo"
-            src="images/pexels-rostislav-uzunov-9629254 (1080p).mp4" type="video/mp4">
+        <video class="videoPlayer object-fit-contain" src="images/pexels-rostislav-uzunov-9629254%20(1080p).mp4"
+            type="video/mp4" autoplay muted loop id="myVideo">
 
 
             Your browser does not support the video tag.
@@ -74,7 +74,7 @@
                     SOFTWARE focusing on your
                     business
                 </h1>
-                <a href="../Project folder/about/about.html"><button class="button">About</button></a>
+
             </div>
 
         </div>
@@ -92,7 +92,7 @@
                 computation we can make
                 our products totally independent, functional and efficient, we put though in all we develop.
             </p>
-            <a href="../Project folder/about/about.html"></a><button class="button">About</button></a>
+            <a href="../Project%20folder/about/about.html" class="button">About</a>
             <br>
             <div class="background">
                 <div class="advantages py-5">
@@ -100,7 +100,7 @@
 
                     <div class="row">
                         <div class="col-lg-6 col-sm-0 ">
-                            <img class="rounded " src="images/pexels-christina-morillo-1181676.jpg" width="100%" alt="">
+                            <img class="rounded " src="images/pexels-christina-morillo-1181676.jpg" width="350" alt="">
                         </div>
                         <div class="col-lg-6 col-sm-0 ">
                             <h3 class="display-4">Ethics</h3>
@@ -118,7 +118,7 @@
                 <div class="row m-auto py-5">
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card bs-body-color">
-                            <a href="../Project folder/Services/index.html">
+                            <a href="../Project%20folder/Services/index.html">
                                 <img src="images/pexels-oluwaseun-duncan-226232.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">We develop applications in different
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="../Project folder/Services/index.html">
+                            <a href="../Project%20folder/Services/index.html">
                                 <img src="images/pexels-porapak-apichodilok-369376.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">Diversity of platform design, taking in
@@ -142,7 +142,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="../Project folder/Services/index.html">
+                            <a href="../Project%20folder/Services/index.html">
                                 <img src="images/pexels-tim-douglas-6205512.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">Our products can help in a varaiety of
@@ -173,7 +173,7 @@
         </div>
 
     </div>
-    </div>
+
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
@@ -186,19 +186,19 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse flex-row" id="navbarNav">
+            <div class="collapse navbar-collapse flex-row" id="footer">
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
                         <a class="nav-link active" style="color:#FFD700" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="../Project folder/Services/index.html">Services</a>
+                        <a class="nav-link" href="../Project%20folder/Services/index.html">Services</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="../Project folder/Contact/contact.html">Contact</a>
+                        <a class="nav-link" href="../Project%20folder/Contact/contact.html">Contact</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="../Project folder/about/about.html">About</a>
+                        <a class="nav-link" href="../Project%20folder/about/about.html">About</a>
                     </li>
                 </ul>
             </div>
@@ -210,7 +210,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <script src="../Project folder/js/homepage.js"></script>
+    <script src="../Project%20folder/js/homepage.js"></script>
 
 </body>
 
