--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -36,7 +36,7 @@
                                 href="../../../GitHubFiles/Project%20folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="../Services/index.html">Services</a>
+                            <a class="nav-link" href="../Services/services.html">Services</a>
                         </li>
                         <li class="nav-item m-5">
                             <a class="nav-link" href="../Contact/contact.html">Contact</a>
@@ -112,7 +112,7 @@
                             href="../../../GitHubFiles/Project%20folder/index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="../Services/index.html">Services</a>
+                        <a class="nav-link" href="../Services/services.html">Services</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link" href="../contact/contact.html">Contact</a>
