--- a/GitHubFiles/Project folder/Services/services.html
+++ b/GitHubFiles/Project folder/Services/services.html
@@ -32,7 +32,8 @@
                 <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item m-5">
-                            <a class="nav-link" href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                            <a class="nav-link" aria-current="page"
+                             <href="../../../GitHubFiles/Project folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
                           <a class="nav-link active" style="color:"#FFD700"
