--- a/GitHubFiles/Project folder/Services/services.html
+++ b/GitHubFiles/Project folder/Services/services.html
@@ -33,7 +33,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item m-5">
                             <a class="nav-link" aria-current="page"
-                             <href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                             href="../../../GitHubFiles/Project folder/index.html">Home</a>
                         </li>
                         <li class="nav-item m-5">
                           <a class="nav-link active" style="color:"#FFD700"
