--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -4,6 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Web and Sofware development">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Java, SQL">
+    <meta name="author" content="Victor Madera Albors">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="shortcut icon" type="image/x-icon" href="../images/Logo.ico">
@@ -23,8 +26,6 @@
                     <p class="tagline">Developing solutions</p>
                 </a>
                 <h1 class="text-start">E&V</h1>
-
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,14 +45,12 @@
                         <li class="nav-item m-5">
                             <a class="nav-link active" style="color:#FFD700"
                                 href="../../../GitHubFiles/Project%20folder/about/about.html">About</a>
-
                     </ul>
                 </div>
             </div>
         </nav>
         <img class="img-fluid" src="../images/pexels-luis-quintero-3101527.jpg" alt="">
         <div id="placeholder" class="over about text-center">
-
             <div class="inner row">
                 <div class="text-center">
                     <h1 class="display-3  py-5" style="color: white;">About Us</h1>
@@ -61,10 +60,8 @@
                         reference
                         we can get, and we delight on it.</p>
                 </div>
-
             </div>
         </div>
-
     </div>
     <div class="main">
         <a onclick="changeOver()">Game</a>
@@ -72,7 +69,6 @@
         <div class="row">
             <div class="col-lg-4 col-md-0">
                 <img class="client" src="../images/AdvanceLogo.png" alt="Advance Logo">
-
             </div>
             <div class="col-lg-4 col-md-0">
                 <img class="client" src="../images/CrecentLogo.png" alt="Crecent Logo">
@@ -80,11 +76,7 @@
             <div class="col-lg-4 col-md-0">
                 <img class="client" src="../images/FixBitLogo.png" alt="FixBit Logo">
             </div>
-
         </div>
-
-
-
         <p class="py-5"><strong>E&V</strong> is a Professional <strong>developers</strong> Platform. Here we will
             provide you only interesting content, which you will like very much. We're dedicated to providing you the
             best of <strong>developers</strong>, with a focus on dependability and <strong>software
@@ -92,7 +84,6 @@
             enjoy offering them to you.
             <strong>E&V</strong> was founded by Eucarys Tatis and Victor Madera, in 2023. A
         </p>
-
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
@@ -100,7 +91,6 @@
                 <img src="../images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
                 <p class="tagline">Developing solutions</p>
             </a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -115,7 +105,7 @@
                         <a class="nav-link" href="../Services/index.html">Services</a>
                     </li>
                     <li class="nav-item m-5">
-                        <a class="nav-link" href="../contact/contact.html">Contact</a>
+                        <a class="nav-link" href="../Contact/contact.html">Contact</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link active" style="color:#FFD700"
@@ -125,7 +115,6 @@
             </div>
         </div>
     </nav>
-    <!-- <script src="../../Project folder/js/about.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
