--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -3,6 +3,9 @@
 <html lang="en">
 
 <head>
+    <meta name="description" content="Web and Sofware development">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Java, SQL">
+    <meta name="author" content="Victor Madera Albors">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E&V</title>
@@ -12,7 +15,6 @@
     <link rel="stylesheet" href="CSS/Stylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-
 </head>
 
 <body>
@@ -24,8 +26,6 @@
                     <p class="tagline">Developing solutions</p>
                 </a>
                 <h1 class="text-start">E&V</h1>
-
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,17 +45,12 @@
                         <li class="nav-item m-5">
                             <a class="nav-link" href="../Project%20folder/about/about.html">About</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
-
-
         <video class="videoPlayer object-fit-contain" src="images/pexels-rostislav-uzunov-9629254%20(1080p).mp4"
             type="video/mp4" autoplay muted loop id="myVideo">
-
-
             Your browser does not support the video tag.
         </video>
         <div class="over">
@@ -64,14 +59,9 @@
                     SOFTWARE focusing on your
                     business
                 </h1>
-
             </div>
-
         </div>
     </div>
-
-
-
     <div class="main">
         <a style="color: white;" onclick="changeVideo()">Change video</a>
         <br>
@@ -87,7 +77,6 @@
             <div class="background">
                 <div class="advantages py-5">
                     <h2>Our advantages</h2>
-
                     <div class="row">
                         <div class="col-lg-6 col-sm-0 ">
                             <img class="rounded " src="images/pexels-christina-morillo-1181676.jpg" width="350" alt="">
@@ -99,8 +88,6 @@
                                 in your shoes and understand the need for perfect and clear comunication</p>
                         </div>
                     </div>
-
-
                 </div>
             </div>
             <div>
@@ -159,19 +146,14 @@
 
                 </div>
             </div>
-
         </div>
-
     </div>
-
-
     <nav class="navbar navbar-expand-lg navbar-dark  footer">
         <div class="container-fluid bottom">
             <a class="navbar-brand" href="index.html">
                 <img src="images/Logo.svg" alt="Logo" height="100" class="d-inline-block align-text-top">
                 <p class="tagline">Developing solutions</p>
             </a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -194,14 +176,10 @@
             </div>
         </div>
     </nav>
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
     <script src="../Project%20folder/js/homepage.js"></script>
-
 </body>
 
 </html>
