--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
-                        <a class="nav-link active" style="color:#FFD700" aria-current="page"
+                        <a class="nav-link active" aria-current="page" 
                          href="../../../GitHubFiles/Project folder/index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
