--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -66,7 +66,7 @@
         <a style="color: white;" onclick="changeVideo()">Change video</a>
         <br>
         <div class="intro py-5">
-            <h2>Introduction: How we work</h2>
+            <h2 class="big">Introduction: How we work</h2>
             <p>At E&V we achieved a great set of developing skills in many different IT fields, we are not just good
                 at
                 computation we can make
@@ -76,7 +76,7 @@
             <br>
             <div class="background">
                 <div class="advantages py-5">
-                    <h2>Our advantages</h2>
+                    <h2 class="big">Our advantages</h2>
                     <div class="row">
                         <div class="col-lg-6 col-sm-0 ">
                             <img class="rounded " src="images/pexels-christina-morillo-1181676.jpg" width="350" alt="">
