--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -30,7 +30,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
                         <a class="nav-link active" aria-current="page" 
-                         href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                         href="../../../GitHubFiles/Project20%folder/index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link" href="../Services/services.html">Services</a>
