--- a/GitHubFiles/Project folder/Contact/contact.html
+++ b/GitHubFiles/Project folder/Contact/contact.html
@@ -150,7 +150,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item m-5">
                         <a class="nav-link active" aria-current="page" 
-                         href="../../../GitHubFiles/Project folder/index.html">Home</a>
+                         href="../../../GitHubFiles/Project20%folder/index.html">Home</a>
                     </li>
                     <li class="nav-item m-5">
                         <a class="nav-link" href="../Services/services.html">Services</a>
@@ -162,18 +162,7 @@
                     <li class="nav-item m-5">
                         <a class="nav-link" href="../about/about.html">About</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul> -->
-                    </li>
-                </ul>
+                  
             </div>
         </div>
     </nav>
