--- a/GitHubFiles/Project folder/about/about.html
+++ b/GitHubFiles/Project folder/about/about.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- idea from https://www.edvantis.com line 21 & 53 to 66 reuse of header div to display an image size to the viewport - navbar is from bootstrap -->
     <div class="header-home">
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
