--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- idea from https://www.edvantis.com line 22 & 54 to 58 to adjust video size to viewport - navbar is from bootstrap -->
     <div class="header-home ">
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
@@ -49,10 +50,12 @@
                 </div>
             </div>
         </nav>
+
         <video class="videoPlayer object-fit-contain" src="images/pexels-rostislav-uzunov-9629254%20(1080p).mp4"
             type="video/mp4" autoplay muted loop id="myVideo">
             Your browser does not support the video tag.
         </video>
+        <!-- end of above comment -->
         <div class="over">
             <div class="inner">
                 <h1 class="display-2"><strong>E&V</strong> creates custom WEB and
